# csharp.consoleUI

./: .gitignore  Class1.cs  Config.cs  Const.cs  Debug.cs  Global.cs  LICENSE  README.md  autorelease_attempt.patch  const.cs  github_workflow_build.sln  plan.md  test.csproj  test_generic_cast.cs  ui.csproj  ui.sln
.fleet/: run.json
.github_build/: .gitignore  File.cs  build.py  github_workflow_build.sln  test.csproj
LatexExt/: ILatex.cs
Properties/: AssemblyInfo.cs
components/: App.cs  Bar.cs  BaseComponent.cs  BoundedSpinner.cs  Button.cs  Component.cs  ComponentConfig.cs  ComponentHolder.cs  ComponentStore.cs  Container.cs  ExitButton.cs  FormattedTable.cs  Frame.cs  GroupComponent.cs  HorizontalGroupComponent.cs  IBaseComponent.cs  IComponent.cs  IComponentDebug.cs  IInteractable.cs  ITable.cs  LatexTable.cs  Logger.cs  MultiLineInputField.cs  NoChildComponent.cs  OverlayApp.cs  Padding.cs  PageSwitcher.cs  PagingTable.cs  RegexTable.cs  Seperator.cs  SingleChildComponent.cs  SingleLineInputField.cs  Switcher.cs  Table.cs  TextLabel.cs  VerticalGroupComponent.cs  VirtualTable.cs  component_split.md
core/: ANSIInputHandler.cs  ActiveStatusHandler.cs  ConsoleCanva.cs  ConsoleHandler.cs  ConsoleInteropsHandler.cs  ConsoleLocation.cs  ConsoleSize.cs  Event.cs  InputHandler.cs  KeyCodeTranslateHandler.cs  MouseInteractionHandler.cs  OutputHnadler.cs  RootInputHandler.cs  StrMagic.cs  handler_log.md  simpleInputHandler.cs
events/: ClickEvent.cs  NotRenderEvent.cs  (+1 more)
stdin_handler/: Cargo.toml
stdin_handler/.fleet/: run.json
stdin_handler/src/: lib.rs
(+46 files in other folders)
