[package]
name = "stdin_handler"
version = "0.1.0"
edition = "2024"
[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.30.1", features = ["term"] }
[target.'cfg(target_family = "windows")'.dependencies]
win32console = "0.1.5"

[lib]
name = "stdin_handler"
crate-type = ["rlib", "cdylib", "staticlib"]

[profile.release]
opt-level = 3
debug = 2
strip = "none"
lto = "thin"
panic = "unwind"
incremental = true
codegen-units = 64

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.15"
cfg-if = "1.0.1"
cli-clipboard = "0.4.0"
